# restate

./: Cargo.toml  deny.toml
.github/workflows/: ci.yml
crates/admin/: Cargo.toml
crates/admin/src/cluster_controller/: logs_controller.rs  service.rs
crates/bifrost/: Cargo.toml
crates/bifrost/src/: error.rs  lib.rs  loglet.rs
crates/bifrost/src/providers/: mod.rs
crates/core/: Cargo.toml
crates/core/src/metadata/: manager.rs
crates/core/src/network/: partition_processor_rpc_client.rs  rpc_router.rs  types.rs
crates/ingress-http/src/: lib.rs
crates/invoker-api/src/: effects.rs
crates/invoker-fake/: Cargo.toml
crates/invoker-fake/src/: lib.rs
crates/invoker-impl/src/: buffer.rs  invocation_task.rs  lib.rs  options.rs
crates/node/: Cargo.toml
crates/node-ctrl/src/: options.rs
crates/node/src/: lib.rs
crates/partition-store/src/: partition_store.rs
crates/partition-store/tests/: integration_test.rs
crates/schema-api/src/: lib.rs
crates/storage-query-datafusion/: Cargo.toml
crates/storage-query-datafusion/src/: context.rs  options.rs
crates/storage-rocksdb/src/: lib.rs  scan.rs  writer.rs
crates/timer/: Cargo.toml
crates/timer/src/: options.rs
crates/tracing-instrumentation/: Cargo.toml
crates/tracing-instrumentation/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: fsm.rs  invocation.rs  lib.rs  retries.rs  time.rs
crates/vqueues/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: ingress_integration.rs  lib.rs  partition_processor_manager.rs
docs/dev/: state-machine.md
dump-bifrost/: Cargo.toml
dump-bifrost/src/: main.rs
server/: Cargo.toml
server/tests/: cluster.rs
(+49 files in other folders)
